--- a/package.json
+++ b/package.json
@@ -24,6 +24,14 @@
     "stringformat": "0.0.5",
     "pad": "1.0.0",
     "typescript": "1.7.5",
-    "path-exists": "2.1.0"
+    "path-exists": "2.1.0",
+    "bootstrap": "3.3.6",
+    "morris.js": "0.5.0",
+    "metismenu": "2.2.0",
+    "font-awesome": "4.5.0",
+    "gridstack": "0.2.3",
+    "raphael": "2.1.4",
+    "jquery": "1.11.1",
+    "jquery-ui": "1.10.5"
   }
 }
